.xmonad/.xmonad/xmonad.errors

xmonad.hs:287:17: error: parse error on input ‘,’
    |
287 |                 , logHook = dynamicLogWithPP $ namedScratchpadFilterOutWorkspacePP $ xmobarPP
    |                 ^
